src/objects/Star_Rating__c.object
<CustomObject>
    <description>stores the rating for of the property</description>
    <fields>
        <fullName>Account_Booking_Type__c</fullName>
        <label>Account Booking Type</label>
        <referenceTo>Account_Booking_Type__c</referenceTo>
        <relationshipLabel>Star Ratings</relationshipLabel>
        <relationshipName>Star_Ratings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Look up to account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Star Ratings</relationshipLabel>
        <relationshipName>Star_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>National_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Star Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Star Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Star Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>